--- a/query.yml
+++ b/query.yml
@@ -6,8 +6,8 @@
       - name: Generate update sql unix
         local_action:
           module: community.general.mssql_script
-          login_user: sa
-          login_password: Password123
+          login_user: 'sa'
+          login_password: 'Password123'
           login_host: windb
           login_port: 1433
           db: CMDB
