--- a/query.yml
+++ b/query.yml
@@ -1,11 +1,16 @@
 ---
 - hosts: localhost
+  vars:
+    user: sa
+    password: Password123
   gather_facts: no
   tasks:
     - block:
       - name: Generate update sql unix
         local_action:
           module: community.general.mssql_script
+          login_user: '{{ user}}'
+          login_password: '{{ password }}'
           login_host: windb
           login_port: 1433
           db: CMDB
